# pdf-mcp-server

./: Cargo.toml  README.md
src/: embeddings.rs  error.rs  loader.rs  main.rs  server.rs  tokenizer.rs
