[package]
name = "pdf-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.99"
async-openai = "0.29.2"
axum = "0.8.6"
bincode = "2.0.1"
cargo = "0.90.0"
clap = { version = "4.5.40", features = ["cargo", "derive", "env"] }
clap_derive = "4.5.47"
compact_str = "0.9.0"
dary_heap = "0.3.8"
dirs = "6.0.0"
fancy-regex = "0.16.2"
futures = "0.3.31"
ndarray = "0.16.1"
pyo3 = "0.27.1"
rayon = "1.11.0"
rmcp = {version = "0.6.1", features = ["server", "transport-io", "transport-streamable-http-server", "transport-worker"]}
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.143"
shellexpand = "3.1.1"
thiserror = "2.0.16"
tiktoken-rs = "0.7.0"
tokio = {version = "1.47.1", features = ["macros", "rt-multi-thread","signal"]}
walkdir = "2.5.0"

